# Producer-OS

./: .editorconfig  .gitignore  BRANCHING.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  RULES_AND_USAGE.md  SECURITY.md  SUPPORT.md  TESTING_GUIDE.md  build_gui_entry.py  config.example.json  nuitka-crash-report.xml  patch-runlog.ps1  pyproject.toml  pytest.ini  run_gui.ps1  run_gui.py  tree_dist.txt
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/constraints/: ci-tools.txt
.github/scripts/: build_windows_nuitka.ps1  install_ci_python_deps.ps1  sign_windows_artifacts.ps1
.github/workflows/: build.yml  codeql.yml  performance.yml  pr-labeler.yml  python.yml  release.yml  scorecard.yml  sync-labels.yml  version.yml
Producer OS Prompts/: Producer OS v2 GUI Prompt.txt  Producer OS v2 Prompt.txt  audio detection prompt .txt
docs/: ARCHITECTURE.md  CLASSIFICATION.md  CLI_REFERENCE.md  COMPATIBILITY_POLICY.md  CONTRIBUTOR_QUICKSTART.md  CUSTOMIZATION.md  GUI_RECREATION_SPEC_LOCK.md  README.md  RELEASE_PROCESS.md  SUPPORT_POLICY.md  TROUBLESHOOTING.md
examples/: bucket_styles.json  buckets.json  config.example.json
examples/synthetic_corpus/: README.md  manifest.json
producer_os_config/: bucket_styles.json  config.json
scripts/: cleanup_local.ps1  generate_synthetic_corpus.py  gui_spec_lock_audit.py  profile_engine_extract.py
src/: bucket_styles.json
src/producer_os/: __init__.py  __main__.py  bucket_service.py  cli.py  config_service.py  engine.py  gui.py  styles_service.py  tuning.py
src/producer_os/schemas/: buckets.schema.json  config.schema.json  styles.schema.json
src/producer_os/ui/: __init__.py  animations.py  app.py  engine_runner.py  state.py  theme.py  widgets.py  window.py
src/producer_os/ui/data/: fl_icon_favorites.py
src/producer_os/ui/dialogs/: icon_picker.py
src/producer_os/ui/pages/: __init__.py  base.py  hub.py  inbox.py  options.py  run.py
tests/: test_engine.py  test_engine_rules.py  test_gui_spec_lock.py
tests/fixtures/: gui_spec_lock_baseline.json
