[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "producer-os"
version = "0.1.0"
description = "Producer OS – organise music sample packs and apply FL Studio folder styling"
authors = [
    { name = "Producer OS Contributors", email = "maintainers@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "librosa>=0.10",
    "soundfile>=0.12",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true