[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "producer-os"
version = "0.1.1"
description = "Producer OS – organise music sample packs and apply FL Studio folder styling"
authors = [
  { name = "KidChadd", email = "kidchadd@users.noreply.github.com" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23",
    "librosa>=0.10",
    "soundfile>=0.12",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
gui = [
  "PySide6",
  "pyqtdarktheme>=0.1.7",
]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "nuitka>=2.5",
  "zstandard>=0.23",
  "python-semantic-release>=9.0.0"
]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[project.scripts]
producer-os = "producer_os.cli:main"
producer-os-gui = "producer_os.gui:main"

[tool.semantic_release]
tag_format = "v{version}"
version_variables = ["pyproject.toml:project.version"]
commit_parser = "conventional"
major_on_zero = true
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.release]
commit_message = "chore(release): {version}"
